# Ribbon

./: .gitignore  CMakeLists.txt
include/: RibbonMenu.hh  RibbonQuickBar.hh  RibbonQuickMenu.hh  RibbonTab.hh
src/: RibbonMenu.cc
